fix: node selection using shift up/down

--- a/packages/carbon-blocks/src/style.styl
+++ b/packages/carbon-blocks/src/style.styl
@@ -68,6 +68,7 @@ span {
 	word-break: break-word;
 }
 [data-name="divider"]
+	outline: none
 	position relative
 	cursor default
 	height: 17px
@@ -86,3 +87,4 @@ span {
 	left 0
 	background: $selectionHaloColor
 	border-radius: 2px
+	pointer-events: none
